# JiPP

./: CMakeLists.txt
allocation_basics/: main.cpp
arrays/: CMakeLists.txt  main.cpp
arrays/include/: arrays.h
arrays/src/: arrays.cpp
calcArea/: CMakeLists.txt  main.cpp
calcArea/include/: area.h
calcArea/src/: area.cpp
constructors/: CMakeLists.txt  main.cpp
containers/: CMakeLists.txt  main.cpp
containers/StopExample/: Line.cpp  vExample.cpp
csvLib/: CMakeLists.txt  data.csv  main.cpp
csvLib/include/: csvLib.h
csvLib/src/: csvLib.cpp
destructor/: CMakeLists.txt  main.cpp
e1NoCopyingConstructor/include/: Point.h
e1NoCopyingConstructor/src/: Point.cpp
exceptions/: CMakeLists.txt  main.cpp
exceptions/include/: exceptions.h
exceptions/src/: exceptions.cpp
figura/: CMakeLists.txt  main.cpp
firstClass/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
imaginary/: CMakeLists.txt  main.cpp
imaginary/include/: imaginary.h
imaginary/src/: imaginary.cpp
matrixApp/: CMakeLists.txt
matrixApp/src/: main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: matrixLib.cpp
node/: CMakeLists.txt  main.cpp
node/include/: Node.h
node/src/: Node.cpp
note/: CMakeLists.txt  main.cpp
pointers/: CMakeLists.txt  main.cpp
pointers/include/: pointers.h
pointers/src/: pointers.cpp
pojazd/: CMakeLists.txt
pojazd/include/: Pojazd.h
pojazd/src/: Pojazd.cpp  main.cpp
simplyCalc/: CMakeLists.txt  main.cpp
simplyCalc/include/: calc.h
simplyCalc/src/: calc.cpp
structures/: CMakeLists.txt  main.cpp
szablony/: CMakeLists.txt  main.cpp
triangle/: CMakeLists.txt  main.cpp
triangle/include/: triangle.h
triangle/src/: triangle.cpp
vector/: CMakeLists.txt  main.cpp
vector/include/: vector.h
vector/src/: vector.cpp
