cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(allocation_basics)
add_subdirectory(simplyCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(calcArea)
add_subdirectory(arrays)
add_subdirectory(pointers)
add_subdirectory(exceptions)
add_subdirectory(structures)
add_subdirectory(firstClass)
add_subdirectory(constructors)
add_subdirectory(destructor)