cmake_minimum_required(VERSION 3.20)
project(JiPP)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(allocation_basics)
add_subdirectory(simplyCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(calcArea)
add_subdirectory(arrays)
add_subdirectory(pointers)
add_subdirectory(exceptions)
add_subdirectory(structures)
add_subdirectory(firstClass)
add_subdirectory(constructors)
add_subdirectory(destructor)

add_subdirectory(matrixApp)
add_subdirectory(matrixLib)

add_subdirectory(e1NoCopyingConstructor)
add_subdirectory(pojazd)
add_subdirectory(node)
add_subdirectory(vector)
add_subdirectory(triangle)
add_subdirectory(imaginary)